--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chickenPotPie.html">Chicken Pot Pie</a>
+    <ul>
+        <li><a href="recipes/chickenPotPie.html">Chicken Pot Pie</a></li>
+        <li><a href="recipes/potatoSoup.html">Potato Soup</a></li>
+    </ul>
 </body>
 </html>
