Finished the recipes

--- a/recipes/chickenPotPie.html
+++ b/recipes/chickenPotPie.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="recipes.css">
     <title>Chicken Pot Pie Recipe</title>
 </head>
-<nav class="nav-link">
+<nav class="navbar" >
+    <div class="nav-link">
     <a id="links" href="../index.html">More Recipes</a>
+    </div>
 </nav>
 <body>
     <h1 id="recipeType">4 Servings of Chicken Pot Pie</h1>
@@ -18,20 +20,23 @@
     <div class="recipeContent">
         <p>If you clicked on this recipe, then you know chicken pot pie isnothing short of perfection. It is the culmination of chicken,peas, carrots, potatoes, and corn, resting in a creamy sauce insideof a crispy, yet thick and buttery pie crust.</p>
         <h2 class="titles">Ingredients</h2>
-            <h4 class="titles">For the Crust</h4>
-            <ul>
+        <div class="ingredientContainer">
+            <div class="col1">
+            <h4 class="ingTitle">For the Crust</h4>
+            <ul class="ingredients">
                 <li>1 1/2 cups all-purpose flour</li>
                 <li>1 teaspoon of salt</li>
                 <li>2 egg yolks</li>
                 <li>3 tablespoons of ice water</li>
                 <li>2/3 cup of cold butter</li>
             </ul>
-            <h4 class="titles">For the Filling</h4>
-            <ul>
+            </div>
+            <div class="col2">
+            <h4 class="ingTitle">For the Filling</h4>
+            <ul class="ingredients">
                 <li>1 cup of sliced carrots (carrots)</li>
-                <li>1 cup sliced celery (If you want to ruin the entire dish)</li>
+                <li>1 cup sliced celery</li>
                 <li>1 cup of frozen peas</li>
-                <li>1 cup chopped whilte onion (not necessary)</li>
                 <li>4 boneless, skinless chicken breast halves</li>
                 <li>4 tablespoons butter</li>
                 <li>5 tablespoons all-purpose flour</li>
@@ -41,7 +46,10 @@
                 <li>1 pinch of peper</li>
                 <li>1 beaten egg</li>
             </ul>
+            </div>
+            </div>
         <h2 class="titles">Steps</h2>
+        <div class="steps">
             <ol>
                 <li>Prep the crust by mixing salt and flour in a medium-sized bowl.
                     Press down in the center of the flour with your hand creating 
@@ -78,6 +86,7 @@
                 <li>Spoon pour the filling into each dish and cover them with cut dough. For the edge of thte dough over each dish edge and press so that the dough sticks to the outer rim. Lighly layer beaten egg over the dough and place the pies on a cookie sheet for 30 to 45 minutes or until the top crust is light brown.</li>
 
             </ol>
+            </div>
     </div>
 </body>
 </html>
